--- a/StareMedic/Views/SearchCC.xaml
+++ b/StareMedic/Views/SearchCC.xaml
@@ -118,18 +118,69 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-            
-        <HorizontalStackLayout Grid.Column="0"
-                               Grid.Row="1"
-                               HorizontalOptions="End">
-            <Button Text="&lt;"
-                    x:Name="BtnPrevListPage"
-                    Clicked="BtnPrevListPage_Clicked"/>
-            <Button Text=">"
-                    x:Name="BtnNextListPage"
-                    Clicked="BtnNextListPage_Clicked"/>
 
-        </HorizontalStackLayout>
+        <Grid
+            ColumnDefinitions="Auto,*"
+            BackgroundColor="{StaticResource Alter1}"
+            Grid.Column="0"       
+            Padding="10"
+            Grid.Row="1"
+            HorizontalOptions="FillAndExpand">
+
+            <Button Text="&lt;"
+            HeightRequest="50"
+            WidthRequest="75"
+            Grid.Column="0"
+            HorizontalOptions="StartAndExpand"
+            x:Name="BtnPrevListPage"
+            FontFamily="HelveticaNeue"
+            BackgroundColor="{StaticResource Alter2}"
+            TextColor="{StaticResource Principal}"
+            Clicked="BtnPrevListPage_Clicked">
+
+                <VisualStateManager.VisualStateGroups>
+                    <VisualStateGroupList>
+                        <VisualStateGroup x:Name="CommonStates">
+                            <VisualState x:Name="Normal" />
+                            <VisualState x:Name="PointerOver">
+                                <VisualState.Setters>
+                                    <Setter Property="BackgroundColor" Value="LightGray" />
+                                </VisualState.Setters>
+                            </VisualState>
+                        </VisualStateGroup>
+                    </VisualStateGroupList>
+                </VisualStateManager.VisualStateGroups>
+
+            </Button>
+
+            <Button Text=">"
+            HorizontalOptions="EndAndExpand"
+            Grid.Column="1"
+            HeightRequest="50"
+            WidthRequest="75"
+            BackgroundColor="{StaticResource Alter2}"
+            TextColor="{StaticResource Principal}"
+            x:Name="BtnNextListPage"
+            FontFamily="HelveticaNeue"
+            Clicked="BtnNextListPage_Clicked">
+
+                <VisualStateManager.VisualStateGroups>
+                    <VisualStateGroupList>
+                        <VisualStateGroup x:Name="CommonStates">
+                            <VisualState x:Name="Normal" />
+                            <VisualState x:Name="PointerOver">
+                                <VisualState.Setters>
+                                    <Setter Property="BackgroundColor" Value="LightGray" />
+                                </VisualState.Setters>
+                            </VisualState>
+                        </VisualStateGroup>
+                    </VisualStateGroupList>
+                </VisualStateManager.VisualStateGroups>
+
+            </Button>
+
+        </Grid>
+        
         <Grid 
             Padding="10"
             ColumnSpacing="-40"
@@ -202,6 +253,7 @@
                     MinimumWidthRequest="160"
                     Grid.Row="1"
                     x:Name="btnCancel"
+                    HeightRequest="50"
                     FontFamily="HelveticaNeue"
                     Clicked="BtnCancel_Clicked"
                     BackgroundColor="{StaticResource Alter2}"
@@ -230,6 +282,7 @@
                     Clicked="BtnNewCC_Clicked"
                     FontFamily="HelveticaNeue"
                     Grid.Column="1"
+                    HeightRequest="50"
                     BackgroundColor="{StaticResource Alter2}"
                     TextColor="{StaticResource Principal}"
                     HorizontalOptions="End"
